crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__array-6.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"[,\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Array(
                                    [
                                        (
                                            Error,
                                            1..2,
                                        ),
                                    ],
                                ),
                                0..2,
                            ),
                        ),
                        0..2,
                    ),
                ),
                0..2,
            ),
        ],
    ),
    [
        found end of input at 1..2 expected expression,
        found end of input at 2..2 expected '","', or '"]"',
    ],
)
