crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__array-7.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"[1,\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Array(
                                    [
                                        (
                                            Number(
                                                (
                                                    1.0,
                                                    1..2,
                                                ),
                                            ),
                                            1..2,
                                        ),
                                    ],
                                ),
                                0..3,
                            ),
                        ),
                        0..3,
                    ),
                ),
                0..3,
            ),
        ],
    ),
    [
        found end of input at 3..3 expected expression,
    ],
)
