crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__array.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"[1, 2, 3]\").unwrap()"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Array(
                            [
                                (
                                    Number(
                                        (
                                            1.0,
                                            1..2,
                                        ),
                                    ),
                                    1..2,
                                ),
                                (
                                    Number(
                                        (
                                            2.0,
                                            4..5,
                                        ),
                                    ),
                                    4..5,
                                ),
                                (
                                    Number(
                                        (
                                            3.0,
                                            7..8,
                                        ),
                                    ),
                                    7..8,
                                ),
                            ],
                        ),
                        0..9,
                    ),
                ),
                0..9,
            ),
        ),
        0..9,
    ),
]
