crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__bool-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"false\").unwrap()"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Boolean(
                            (
                                false,
                                0..5,
                            ),
                        ),
                        0..5,
                    ),
                ),
                0..5,
            ),
        ),
        0..5,
    ),
]
