crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__bool.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"true\").unwrap()"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Boolean(
                            (
                                true,
                                0..4,
                            ),
                        ),
                        0..4,
                    ),
                ),
                0..4,
            ),
        ),
        0..4,
    ),
]
