crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__brace_depth_nested.snap
---
source: tests/grammar/alpha034.rs
expression: "compiler.tokenize(r#\"\"outer { \"inner {x}\" }\"\"#)"
---
[
    (
        Token(
            "\"",
        ),
        0..1,
    ),
    (
        Token(
            "outer ",
        ),
        1..7,
    ),
    (
        Token(
            "{",
        ),
        7..8,
    ),
    (
        Token(
            "\"",
        ),
        9..10,
    ),
    (
        Token(
            "inner ",
        ),
        10..16,
    ),
    (
        Token(
            "{",
        ),
        16..17,
    ),
    (
        Token(
            "x",
        ),
        17..18,
    ),
    (
        Token(
            "}",
        ),
        18..19,
    ),
    (
        Token(
            "\"",
        ),
        19..20,
    ),
    (
        Token(
            "}",
        ),
        21..22,
    ),
    (
        Token(
            "\"",
        ),
        22..23,
    ),
]
