crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__brace_depth_simple.snap
---
source: tests/grammar/alpha034.rs
expression: "compiler.tokenize(r#\"\"{{}}\" \"#)"
---
[
    (
        Token(
            "\"",
        ),
        0..1,
    ),
    (
        Token(
            "{",
        ),
        1..2,
    ),
    (
        Token(
            "{",
        ),
        2..3,
    ),
    (
        Token(
            "}",
        ),
        3..4,
    ),
    (
        Token(
            "}",
        ),
        4..5,
    ),
    (
        Token(
            "\"",
        ),
        5..6,
    ),
]
