crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__cast-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"1 as \"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Cast(
                                    (
                                        Number(
                                            (
                                                1.0,
                                                0..1,
                                            ),
                                        ),
                                        0..1,
                                    ),
                                    (
                                        "as",
                                        2..4,
                                    ),
                                    (
                                        <Invalid type>,
                                        4..4,
                                    ),
                                ),
                                0..4,
                            ),
                        ),
                        0..4,
                    ),
                ),
                0..4,
            ),
        ],
    ),
    [
        found end of input at 4..4 expected type,
    ],
)
