crates/server/tests/grammar/snapshots/r#mod__grammar__alpha034__cast.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"1 as Num\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Cast(
                            (
                                Number(
                                    (
                                        1.0,
                                        0..1,
                                    ),
                                ),
                                0..1,
                            ),
                            (
                                "as",
                                2..4,
                            ),
                            (
                                Num,
                                5..8,
                            ),
                        ),
                        0..8,
                    ),
                ),
                0..8,
            ),
        ),
        0..8,
    ),
]
